============

Trunk only
==========

Features
--------
* Local site support: Five has now support for creating local sites and 
  thereby local utilities. This is mostly needed for allowing CMF to convert
  it's portal tools into local utilities.
  See doc/local_sites.txt for more information 
  (that is, when I have finished that piece of documentation /Regebro).

Restructuring
-------------

* Added a (temporarily) forked copy of the "new-and-improved" test runner
  and supporting 'zope.testing' package, lifted from
  http://svn.zope.org/zope.testing.  This code should be removed for Five
  1.3, which will use the updated version of 'zope.testing' in the Zope 2.9
  / Zope 3.2 tree.

* Moved the 'Five.testing' package down to 'Five.tests.testsing', in order
  to make room for the 'zope.testing' code.

* Removed backwards compatibility for some moved classes (AddForm, EditForm, 
  ContentAdding)

Five 1.1 (2005-10-04)
=====================

Features
--------

* When Zope was not in debug mode, an error in a ZCML file would cause Five to
  stop loading ZCML completely, making all subsequent products "dead". The
  effect would typically be that objects appeared to have no views at all. 
  Now a ZCML error will only stop the ZCML loading for that product, but the 
  rest of the products will load as usual. A traceback will still be printed 
  in the event log.

  In debug mode the behaviour has not changed; a ZCML error will stop Zope 
  startup completely, and print a traceback if running in foreground mode.
  
Restructuring
-------------

* The deprecated FivePageTemplateFile was removed, and the erroneous use of 
  this by EditView was changed.

Bugfixes
--------

* Repaired 'forms.txt' test which expected an error page when passing
  'handle_errors' as False;  it now expects an Unauthorized traceback.
  Note that this test fails on Zope 2.8.1, which incorrectly ignored
  'handle_errors'.

* FiveTraversable should only do a view lookup and not call the traverse 