@@ -1,16 +1,8 @@
 Five tests
 ==========
 
-The tests require ZopeTestCase to be installed. ZopeTestCase can be
-downloaded from here:
-
-http://zope.org/Members/shh/ZopeTestCase
-
-it needs to be installed in your Zope software's lib/python/Testing
-directory.
-
-Then, if you have Zope 2.7.3 or better all you have to do is type::
+All you have to do is type::
 
   ./bin/zopectl test --dir Products/Five
 
-to run the Five tests. 
+to run the Five tests.
